# swagger.json
@@ -82,6 +82,34 @@
                     }
                 }
             }
+        },
+        "/doctor-info": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "tags": ["Doctor Info"],
+                "description": "Cadastro de informações de um médico",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/DoctorInfoRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Informações do médico criado com sucesso"
+                    },
+                    "400": {
+                        "description": "Erro de cadastro"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -175,6 +203,31 @@
                         "type": "string",
                         "description": "Especialidade do médico",
                         "format": "uuid"
+                    }
+                }
+            },
+            "DoctorInfoRequest": {
+                "type": "object", 
+                "properties": {
+                    "startAt": {
+                        "type": "string",
+                        "description": "Horário de início de atendimento",
+                        "example": "10:00"
+                    },
+                    "endAt": {
+                        "type": "string",
+                        "description": "Horário de término de atendimento",
+                        "example": "16:00"
+                    },
+                    "duration": {
+                        "type": "number",
+                        "description": "Duração do atendimento em minutos",
+                        "example": "45"
+                    },
+                    "price": {
+                        "type": "number",
+                        "description": "Valor da consulta",
+                        "example": "160"
                     }
                 }
             }
